Overflow issue Fixed

--- a/_sass/design-system.scss
+++ b/_sass/design-system.scss
@@ -4,6 +4,7 @@ body {
   font-weight: $lato-regular;
   font-size: $base-font-size; // = 1em
   color: semantic-color(text);
+  overflow-x: hidden;
   @include breakpoint(small only) {
     font-size: 16px;
   }
